syntax = "proto3";
package StudentsService.Grpc.v1;
option csharp_namespace = "StudentsClient.DAL.Protos.v1";
import "google/protobuf/empty.proto";

service StudentService{
	rpc Get(StudentByIdRequest) returns (StudentReply);
	rpc GetAll(google.protobuf.Empty) returns (stream StudentReply);
	rpc CreateStudent(stream StudentCreateRequest) returns (stream StudentCreateReply);
	rpc DeleteStudent(StudentByIdRequest) returns (StudentDeleteReply);
	rpc UpdateStudent(StudentUpdateRequest) returns (StudentUpdateReply);
}

message StudentByIdRequest{
	int32 Id = 1;
}

message StudentCreateRequest{
	string StudentNumber = 2;
	string FirstName = 3;
	string LastName = 4;
	string Description = 5;
	repeated string PhoneNumbers = 6;
}

message StudentUpdateRequest{
	int32 Id = 1;
	string FirstName = 2;
	string LastName = 3;
	string Description = 4;
}

message StudentCreateReply{
	int32 Id = 1;
}

message StudentUpdateReply{
	bool Success = 1;
}


message StudentDeleteReply{
	bool Success = 1;
}

message StudentReply{
	int32 Id = 1;
	string StudentNumber = 2;
	string FirstName = 3;
	string LastName = 4;
	string Description = 5;
	repeated string PhoneNumbers = 6;
}


